color changesaligning and fixed header

--- a/style.css
+++ b/style.css
@@ -3,17 +3,17 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: 'PT Sans', sans-serif;
+        font-family: 'helvetica', serif;
     }
 
     html {
-        background: rgba(0, 0, 0, 0) url("../images/ContourBackground.png") no-repeat center top 5px fixed;
+        background: rgba(0, 0, 0, 0) url("../images/ContourBackgroundColor.png") no-repeat center top 5px fixed;
         background-size: cover;
     }
 
     html::after {
         content: "";
-        background: url(images/ContourBackground.png);
+        background: url(images/ContourBackgroundColor.png);
         opacity: 0.9;
     }
 
@@ -26,8 +26,8 @@
 
     nav {
         position: fixed;
-        top: 10px;
         width: 100%;
+        top: 10px;
         /*display: inline-block;
     width: 100%;
     position: fixed;
@@ -38,15 +38,16 @@
     z-index: 1;*/
     }
 
-    nav img {
+    nav a img {
         width: 30%;
         margin-top: 32px;
         padding-top: 7px;
         padding-left: 5px;
         position: relative;
         top: 10px;
-        left: 40%;
+        left: 30%;
         display: inline-block;
+        z-index: 0;
         /*width: 40%;
     position: relative;
     top: 10px;*/
@@ -55,12 +56,23 @@
     nav div.appName {
         display: inline-block;
         width: 60%;
+        margin-left: -95px;
     }
 
     h1 {
-        font-size: 3.5rem;
+        font-size: 3rem;
         margin-bottom: 5px;
         margin-top: 15px;
+        letter-spacing: -3px;
+        text-transform: uppercase;
+    }
+
+    .active {
+        background: #55929D;
+        border-bottom: 2px solid lightgray;
+        padding-bottom: 15px;
+        width: 100%;
+        margin-top: 0;
     }
 
     #mainNav.navbar-shrink {
@@ -73,9 +85,9 @@
 
     section.search-form {
         display: block;
-        width: 60%;
-        margin-left: 15%;
-        margin-top: 20%;
+        width: 50%;
+        margin: 20% auto 0 auto;
+        z-index: -1;
     }
     /*Search form*/
 
@@ -107,7 +119,7 @@
 
     .js-search-results li {
         margin: 20px auto;
-        width: 100%;
+        width: 90%;
         height: 200px;
         text-align: left;
         padding: 20px;
@@ -125,12 +137,13 @@
         display: block;
         width: 100%;
         margin-left: 10px;
+        margin-right: 20px;
         margin-bottom: 20px;
     }
 
     .js-search-results li div.event-display-name {
         font-weight: bolder;
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 
     .js-search-results li div.event-display-details {
@@ -171,10 +184,10 @@
             width: 60%;
         }
         h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
         }
         nav div.appName {
-            display: block;
+            display: inline-block;
             width: 80%;
             text-align: center;
             margin-left: auto;
@@ -187,16 +200,27 @@
 
     @media only screen and (max-width: 480px) {
         body {
-            font-size: 10px;
+            font-size: 12px;
         }
         nav {
             position: static;
         }
         section.search-form {
-            margin-top: 50px;
+            margin-top: 100px;
+        }
+        nav a#mainLogo     {
+            display: block;
+            width: 40%;
+            margin: auto;
         }
         nav div.appName {
             display: block;
             width: 100%;
+        }
+        .searchButton {
+            margin: auto;
+        }
+        .js-search-results li div.event-display-name {
+            font-size: 1rem;
         }
     }
